# esp32-web-server-comparison

./: .gitattributes  README.md
benchmark/: README.md  connection_benchmark.py  iot_benchmark.py  readme.txt
benchmark/iot_results/: Asio_sessionDelay-3.0_requestDelay-1.0_2022-08-24_12-35-04.csv  Asio_sessionDelay-3.0_requestDelay-1.0_2022-08-24_12-36-28.csv  Asio_sessionDelay-3.0_requestDelay-1.0_2022-08-24_12-38-11.csv  C-BSD_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-05-17.csv  C-BSD_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-06-47.csv  C-BSD_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-08-07.csv  C-Netconn_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-10-13.csv  C-Netconn_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-11-07.csv  C-Netconn_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-12-23.csv  Lua_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-29-10.csv  Lua_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-31-03.csv  Lua_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-33-34.csv  Python_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-23-54.csv  Python_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-24-59.csv  Python_sessionDelay-3.0_requestDelay-1.0_2022-08-24_02-26-11.csv  Rust_sessionDelay-3.0_requestDelay-1.0_2022-08-24_13-38-39.csv  Rust_sessionDelay-3.0_requestDelay-1.0_2022-08-24_13-40-27.csv  Rust_sessionDelay-3.0_requestDelay-1.0_2022-08-24_13-45-57.csv  results.txt
web_server/c_bsd/: CMakeLists.txt  (+3 more)
web_server/rust/: Cargo.toml  README.md  sdkconfig.defaults
web_server/rust/.cargo/: config.toml
web_server/rust/src/: main.rs
(+88 files in other folders)
